fixed checkbox bug on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -99,6 +99,7 @@ body {
 
 /* Hiding default checkbox */
 .tasks-item__checkbox {
+  position: relative;
   z-index: 2;
   margin: 0;
   width: var(--size-s);
